@@ -1,5 +1,9 @@
 2006-07-18  Chris Dunlap  <cdunlap@llnl.gov>
 
+	* src/munged/dec.c(dec_process_msg): Sanitize rsp msg data on error.
+	* src/munged/enc.c(enc_process_msg): Sanitize rsp msg data on error.
+	* src/libcommon/m_msg.c, src/libcommon/m_msg.h: Added m_msg_reset().
+
 	* src/libcommon/munge_defs.h: Moved MUNGED_PIDFILE to /var/run/munge/.
 
 2006-07-13  Chris Dunlap  <cdunlap@llnl.gov>
